<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.pages.a_Intro.WelcomeFragment"

    >

    <ImageView
        android:id="@+id/welcomeFragment_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/welcome_background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/auht_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_semibold"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/get_your_groceries_welcome_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/main_color"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/main_color"
        app:placeholderTextColor="@color/main_color"
        android:id="@+id/linearLayout"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeFragment_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.045"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/number_layout"
            >

            <TextView
                app:ccp_hintExampleNumber="true"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="5dp"
                android:gravity="center"
                android:text="+20 -"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </TextView>



            <TextView
                android:id="@+id/welcomeFragment_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="1026656520"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="10"
                android:clickable="false"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_medium"
                android:paddingHorizontal="10dp"
                />


        </LinearLayout>




    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        android:background="@color/auth_color"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginHorizontal="15dp
"
        />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_semibold"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/or_connect_with_social_media"
        android:textColor="#828282"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.072" />

    <RelativeLayout
        android:id="@+id/google_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/facebook_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        android:layout_marginTop="@dimen/_10sdp"
        >


        <TextView
            android:id="@+id/google_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/google_btn_shape"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="@string/continue_with_google"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <ImageView
            android:id="@+id/google_btn_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="312dp"
            android:src="@drawable/google_icon" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/facebook_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/google_layout"
        >


        <TextView
            android:id="@+id/check_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/facebook_btn_shape"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <ImageView
            android:id="@+id/facebook_btn_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="312dp"
            android:src="@drawable/ic_facebook_icon" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
